avformat/utils: Use internal->avctx for bitrate in estimate_timings_from_bit_rate() if needed

The internal avctx bitrate is copied into codecpar after estimate_timings()

Fixes Ticket5646

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>